--- a/abacus.html
+++ b/abacus.html
@@ -12,36 +12,7 @@
 </head>
 
 <body>
-    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="18" height="18" viewBox="0 0 172 172"
-        style=" fill:#000000;">
-        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter"
-            stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
-            font-size="none" text-anchor="none" style="mix-blend-mode: normal">
-            <path d="M0,172v-172h172v172z" fill="none"></path>
-        </g>
-    </svg>
-    <div id="abacus-holder">
-        <table id="abacus">
-            <tr>
-                <td data-attribute="10"></td>
-                <td data-attribute="10"></td>
-                <td data-attribute="10"></td>
-                <td data-attribute="10"></td>
-                <td data-attribute="10"></td>
-            </tr>
-            <tr>
-                <td data-attribute="1"></td>
-                <td data-attribute="1"></td>
-                <td data-attribute="1"></td>
-                <td data-attribute="1"></td>
-                <td data-attribute="1"></td>
-            </tr>
-        </table>
-        <div id="sum">0</div>
-    </div>
-
-
-
+    <div id="soroban"> </div>
 </body>
 
 </html>
