Create bottom deck of abacus graphic

--- a/abacus.html
+++ b/abacus.html
@@ -14,17 +14,50 @@
 
 <body>
    <div id="abacus-holder">
-      <table id="abacus">         
-         
+      <table id="abacus">    
          <tr>
-            <td data-attribute="10"></td>
+            <td data-attribute="10000000"></td>
+            <td data-attribute="10000000"></td>
+            <td data-attribute="10000000"></td>
+            <td data-attribute="10000000"></td>
+         </tr>
+         <tr>
+            <td data-attribute="1000000"></td>
+            <td data-attribute="1000000"></td>
+            <td data-attribute="1000000"></td>
+            <td data-attribute="1000000"></td>
+         </tr>
+         <tr>
+            <td data-attribute="100000"></td>
+            <td data-attribute="100000"></td>
+            <td data-attribute="10000"></td>
+            <td data-attribute="10000"></td>
+         </tr>
+         <tr>
+            <td data-attribute="10000"></td>
+            <td data-attribute="10000"></td>
+            <td data-attribute="10000"></td>
+            <td data-attribute="10000"></td>
+         </tr>
+         <tr>
+            <td data-attribute="1000"></td>
+            <td data-attribute="1000"></td>
+            <td data-attribute="1000"></td>
+            <td data-attribute="1000"></td>
+         </tr>
+         <tr>
+            <td data-attribute="100"></td>
+            <td data-attribute="100"></td>
+            <td data-attribute="100"></td>
+            <td data-attribute="100"></td>
+         </tr>
+         <tr>           
             <td data-attribute="10"></td>
             <td data-attribute="10"></td>
             <td data-attribute="10"></td>
             <td data-attribute="10"></td>
          </tr>
          <tr>
-            <td data-attribute="1"></td>
             <td data-attribute="1"></td>
             <td data-attribute="1"></td>
             <td data-attribute="1"></td>
