--- a/abacus.html
+++ b/abacus.html
@@ -13,51 +13,67 @@
 </head>
 
 <body>
-   <div id="abacus-holder">
-      <table id="abacus">    
+   <div id="abacus-holder">      
+      <table id="abacus">             
          <tr>
+            <td data-attribute="50000000"></td>
+            <td class="separator"></td>
             <td data-attribute="10000000"></td>
             <td data-attribute="10000000"></td>
             <td data-attribute="10000000"></td>
             <td data-attribute="10000000"></td>
          </tr>
          <tr>
+            <td data-attribute="5000000"></td>
+            <td class="separator"></td>
             <td data-attribute="1000000"></td>
             <td data-attribute="1000000"></td>
             <td data-attribute="1000000"></td>
             <td data-attribute="1000000"></td>
          </tr>
          <tr>
+            <td data-attribute="500000"></td>
+            <td class="separator"></td>
             <td data-attribute="100000"></td>
             <td data-attribute="100000"></td>
             <td data-attribute="10000"></td>
             <td data-attribute="10000"></td>
          </tr>
          <tr>
+            <td data-attribute="50000"></td>
+            <td class="separator"></td>
             <td data-attribute="10000"></td>
             <td data-attribute="10000"></td>
             <td data-attribute="10000"></td>
             <td data-attribute="10000"></td>
          </tr>
          <tr>
+            <td data-attribute="5000"></td>
+            <td class="separator"></td>
             <td data-attribute="1000"></td>
             <td data-attribute="1000"></td>
             <td data-attribute="1000"></td>
             <td data-attribute="1000"></td>
          </tr>
          <tr>
+            <td data-attribute="500"></td>
+            <td class="separator"></td>
             <td data-attribute="100"></td>
             <td data-attribute="100"></td>
             <td data-attribute="100"></td>
             <td data-attribute="100"></td>
          </tr>
-         <tr>           
+         <tr>      
+            <td data-attribute="50"></td>
+            <td class="separator"></td>
             <td data-attribute="10"></td>
             <td data-attribute="10"></td>
             <td data-attribute="10"></td>
             <td data-attribute="10"></td>
          </tr>
          <tr>
+            <td data-attribute="5"></td>
+            <td class="separator" rowspan=""></td>
             <td data-attribute="1"></td>
             <td data-attribute="1"></td>
             <td data-attribute="1"></td>
