Fix up styling for upper deck

--- a/abacus.html
+++ b/abacus.html
@@ -16,7 +16,7 @@
    <div id="abacus-holder">      
       <table id="abacus">             
          <tr>
-            <td data-attribute="50000000"></td>
+            <td data-attribute="50000000" class="upper"></td>
             <td class="separator"></td>
             <td data-attribute="10000000"></td>
             <td data-attribute="10000000"></td>
@@ -24,7 +24,7 @@
             <td data-attribute="10000000"></td>
          </tr>
          <tr>
-            <td data-attribute="5000000"></td>
+            <td data-attribute="5000000" class="upper"></td>
             <td class="separator"></td>
             <td data-attribute="1000000"></td>
             <td data-attribute="1000000"></td>
@@ -32,7 +32,7 @@
             <td data-attribute="1000000"></td>
          </tr>
          <tr>
-            <td data-attribute="500000"></td>
+            <td data-attribute="500000" class="upper"></td>
             <td class="separator"></td>
             <td data-attribute="100000"></td>
             <td data-attribute="100000"></td>
@@ -40,7 +40,7 @@
             <td data-attribute="10000"></td>
          </tr>
          <tr>
-            <td data-attribute="50000"></td>
+            <td data-attribute="50000" class="upper"></td>
             <td class="separator"></td>
             <td data-attribute="10000"></td>
             <td data-attribute="10000"></td>
@@ -48,7 +48,7 @@
             <td data-attribute="10000"></td>
          </tr>
          <tr>
-            <td data-attribute="5000"></td>
+            <td data-attribute="5000" class="upper"></td>
             <td class="separator"></td>
             <td data-attribute="1000"></td>
             <td data-attribute="1000"></td>
@@ -56,7 +56,7 @@
             <td data-attribute="1000"></td>
          </tr>
          <tr>
-            <td data-attribute="500"></td>
+            <td data-attribute="500" class="upper"></td>
             <td class="separator"></td>
             <td data-attribute="100"></td>
             <td data-attribute="100"></td>
@@ -64,7 +64,7 @@
             <td data-attribute="100"></td>
          </tr>
          <tr>      
-            <td data-attribute="50"></td>
+            <td data-attribute="50" class="upper"></td>
             <td class="separator"></td>
             <td data-attribute="10"></td>
             <td data-attribute="10"></td>
@@ -72,7 +72,7 @@
             <td data-attribute="10"></td>
          </tr>
          <tr>
-            <td data-attribute="5"></td>
+            <td data-attribute="5" class="upper"></td>
             <td class="separator" rowspan=""></td>
             <td data-attribute="1"></td>
             <td data-attribute="1"></td>
