--- a/abacus.html
+++ b/abacus.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" type="text/css" href="./assets/stylesheets/reset.css" />
       <link rel="stylesheet" type="text/css" href="./assets/stylesheets/bg.css" />
       <link rel="stylesheet" type="text/css" href="./assets/stylesheets/abacus.css" />
+      <script src="./src/timer.js"></script>
       <script src="./src/abacus.js"></script>
    </head>
    <body onload="main()">
@@ -109,5 +110,5 @@
         </tr>
       </table>
     </div>
-  </body>   
+  </body>
 </html>
