Add reset feature

--- a/challenge.html
+++ b/challenge.html
@@ -28,9 +28,13 @@
         <span id="addend1"></span>
         <span id="operator"></span>
         <span id="addend2"></span>
+        <span>=</span>
+        <span id="total"></span>
+        <br />
+        <span id="message"> </span>
       </div>
       <div id="sum-holder">
-        <span id="total">Sum: 0</span>
+        <button id="reset" onclick="reset()">RESET</button>
       </div>
       <div id="abacus-holder">
         <table id="abacus">
