--- a/freemode.html
+++ b/freemode.html
@@ -25,7 +25,8 @@
   <body onload="main()">
     <div id="main">
       <div id="sum-holder">
-        <span id="total">Sum: 0</span>
+        <span>CURRENT VALUE:</span>
+        <span id="total">0</span>
       </div>
       <div id="abacus-holder">
         <table id="abacus">
