Adjust free mode and challenge link on bubble

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         
         <div class="big-circles">
             <div class="big-circle-free-mode">
-              <a class="big-circle" href="freemode.html"></a>
-              <span>Free Mode</span>
+              <a class="big-circle" href="freemode.html">
+              <span>Free Mode</span></a>
             </div>
             <div class="big-cicle-challenge">
-              <a class="big-circle" href="challenge.html"></a>
-              <span>Challenge</span>
+              <a class="big-circle" href="challenge.html">
+              <span>Challenge</span></a>
             </div>
             <div class="big-circle"></div>            
         </div>        
