--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Abacus Fun</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Titillium+Web" />
     <link rel="stylesheet" type="text/css" href="./assets/stylesheets/reset.css" />
     <link rel="stylesheet" type="text/css" href="./assets/stylesheets/index.css" />
   </head>
