Center the current value text in free mode

--- a/challenge.html
+++ b/challenge.html
@@ -3,20 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Abacus Fun</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Titillium+Web"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./assets/stylesheets/reset.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./assets/stylesheets/abacus.css"
-    />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Titillium+Web" />
+    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/abacus.css" />
     <script src="./src/math.js"></script>
     <script src="./src/timer.js"></script>
     <script src="./src/abacus.js"></script>
