--- a/freemode.html
+++ b/freemode.html
@@ -3,29 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <title>Abacus Fun</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Titillium+Web"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./assets/stylesheets/reset.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./assets/stylesheets/abacus.css"
-    />
-    <script src="./src/math.js"></script>
-    <script src="./src/timer.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Titillium+Web" />
+    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/abacus.css" />
+    <script src="./src/math.js"></script>    
     <script src="./src/abacus.js"></script>
   </head>
 
   <body onload="main()">
     <div id="main">
-      <div id="sum-holder">
-        <span>CURRENT VALUE:</span>
+      <div id="sum-holder">        
         <span id="total">0</span>
       </div>
       <div id="abacus-holder">
