Adjust tooltip position

--- a/freemode.html
+++ b/freemode.html
@@ -20,7 +20,7 @@
           <div id="reset-wrapper">
             <button id="reset" onclick="reset()"></button>
           </div>
-          <div class="left">
+          <div class="top">
               <p>Press this button to reset the abacus</p>
               <i></i>
           </div>
