Add back button

--- a/freemode.html
+++ b/freemode.html
@@ -10,8 +10,11 @@
     <script src="./src/abacus.js"></script>
   </head>
 
-  <body onload="main()">
+  <body onload="main()">    
     <div id="main">
+      <div>
+        <a href="/"><img src="./assets/images/back.png" width="64" height="64" /></a>
+      </div>
       <div id="text-wrapper">        
         <span id="total">0</span>
       </div>
