Remove back icon and change it to close icon

--- a/challenge.html
+++ b/challenge.html
@@ -13,6 +13,9 @@
 
   <body onload="main()">
     <div id="main">
+      <div class="close-wrapper">
+        <a href="/" class="icon-close">Close</a>
+      </div>
       <div id="text-wrapper">
         <span id="addend1"></span>
         <span id="operator"></span>
