--- a/freemode.html
+++ b/freemode.html
@@ -12,8 +12,8 @@
 
   <body onload="main()">    
     <div id="main">
-      <div>
-        <a href="/"><img src="./assets/images/back.png" width="64" height="64" /></a>
+      <div class="close-wrapper">
+        <a href="/" class="icon-close">Close</a>
       </div>
       <div id="text-wrapper">        
         <span id="total">0</span>
