Add custom math question functionality

--- a/challenge.html
+++ b/challenge.html
@@ -16,10 +16,11 @@
       <div class="close-wrapper">
         <a href="/" class="icon-close">Close</a>
       </div>
+      <span class="heading">Abacus Fun</span>
       <div id="text-wrapper">
-        <span id="addend1"></span>
-        <span id="operator"></span>
-        <span id="addend2"></span>
+        <input id="addend1" type="text" value="" size="3">
+        <input id="operator" type="text" value="" size="1">
+        <input id="addend2" type="text" value="" size="3">
         <span>=</span>
         <span id="total"></span>
         <br />
