Update close button with new image

--- a/freemode.html
+++ b/freemode.html
@@ -13,7 +13,9 @@
   <body onload="main()">    
     <div id="main">
       <div class="close-wrapper">
-        <a href="/" class="icon-close">Close</a>
+        <a href="/" class="icon-close">
+          <img alt="Close" src="./assets/images/close.png" width="60" height="57">
+        </a>
       </div>
       <div id="text-wrapper">        
         <span id="total">0</span>
