--- a/challenge.html
+++ b/challenge.html
@@ -26,7 +26,9 @@
   <body onload="main()">
     <div id="main">
       <div class="close-wrapper">
-        <a href="/" class="icon-close">Close</a>
+        <a href="/" class="icon-close">
+          <img alt="Close" src="./assets/images/close.png" width="60" height="57">
+        </a>
       </div>
       <span class="heading">Abacus Fun</span>
       <div id="text-wrapper">
