Add tutorial steps buttons

--- a/freemode.html
+++ b/freemode.html
@@ -12,7 +12,7 @@
 
   <body onload="main()">    
     <div id="main">
-      <div class="close-wrapper">
+      <div class="menu-wrapper">
         <a href="/" class="icon-close">
           <img alt="Close" src="./assets/images/close.png" width="60" height="57">
         </a>
