--- a/challenge.html
+++ b/challenge.html
@@ -25,7 +25,7 @@
 
   <body onload="main()">
     <div id="main">
-      <div class="close-wrapper">
+      <div class="menu-wrapper">
         <a href="/" class="icon-close">
           <img alt="Close" src="./assets/images/close.png" width="60" height="57">
         </a>
