Fix null style error when no addend object

--- a/tutorial.html
+++ b/tutorial.html
@@ -26,7 +26,7 @@
         </div>
       </div>      
       <div id="text-wrapper">      
-        <div>Welcome to the basic tutorial!</div>  
+        <div id="message">Welcome to the basic tutorial!</div>  
         <span id="total">0</span>
       </div>
       <div id="abacus-holder">
