Add tutorial disabled steps icons

--- a/tutorial.html
+++ b/tutorial.html
@@ -117,14 +117,14 @@
         </table> 
         <table id="place-value">
           <tr>
-            <td id="sum-ten-million" data-value="0"></td>
-            <td id="sum-million" data-value="0"></td>
-            <td id="sum-hundred-thousand" data-value="0"></td>
-            <td id="sum-ten-thousand" data-value="0"></td>
-            <td id="sum-thousand" data-value="0"></td>
-            <td id="sum-hundred" data-value="0"></td>
-            <td id="sum-ten" data-value="0"></td>
-            <td id="sum-unit" data-value="0"></td>
+            <td id="sum-ten-million" data-value="0">0</td>
+            <td id="sum-million" data-value="0">0</td>
+            <td id="sum-hundred-thousand" data-value="0">0</td>
+            <td id="sum-ten-thousand" data-value="0">0</td>
+            <td id="sum-thousand" data-value="0">0</td>
+            <td id="sum-hundred" data-value="0">0</td>
+            <td id="sum-ten" data-value="0">0</td>
+            <td id="sum-unit" data-value="0">0</td>
           </tr>
         </table>               
       </div>
