Set tutorial steps button disabled property

--- a/tutorial.html
+++ b/tutorial.html
@@ -18,11 +18,9 @@
           <img alt="Close" src="./assets/images/close.png" width="60" height="57">
         </a>
         <div class="menu-item steps">
-          <button id="prev-step" onclick="showTutorial(-1)">
-            <img alt="Previous step" src="./assets/images/prev.png" width="60" height="57">          
+          <button id="prev-step" class="prev-step-disabled" onclick="showTutorial(-1)" disabled>            
           </button>
-          <button id="next-step" onclick="showTutorial(1)">          
-            <img alt="Next step" src="./assets/images/next.png" width="60" height="57">
+          <button id="next-step" class="next-step" onclick="showTutorial(1)">                    
           </button>
         </div>
       </div>      
